--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -38,7 +38,6 @@ services:
       - inception
     healthcheck:
       test: ["CMD", "pgrep", "php-fpm"]
-#     test: ["CMD", "curl", "-f", "http://localhost:9000"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -58,7 +57,7 @@ services:
     networks:
       - inception
     healthcheck:
-      test: ["CMD", "mariadb-admin", "ping", "-h", "localhost", "-u", "root", "-p$MYSQL_ROOT_PASSWORD"]
+      test: ["CMD", "sh", "-c", "test -S /run/mysqld/mysqld.sock"]
       interval: 10s
       timeout: 5s
       retries: 5
