--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -1,20 +1,13 @@
 [www]
-
-# Data of the user
-user = www-data
-group = www-data
-
-# Port data
-listen = 0.0.0.0:9000
-listen.owner = www-data
-listen.group = www-data
+user = nobody
+group = nobody
+listen = 9000
+listen.owner = nobody
+listen.group = nobody
 listen.mode = 0660
-
-# Process management
 pm = dynamic
 pm.max_children = 25
 pm.start_servers = 5
 pm.min_spare_servers = 1
 pm.max_spare_servers = 10
-
 clear_env = no
