--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -11,11 +11,11 @@ http {
 
 	server {
 		listen 443 ssl;
-		server_name mpietrza.42.fr;
+		server_name ${DOMAIN_NAME};
 
 		ssl_certificate		/etc/nginx/ssl/inception.crt;
 		ssl_certificate_key	/etc/nginx/ssl/inception.key;
-		ssl_protocols		TLSv1.3;
+		ssl_protocols		TLSv1.2 TLSv1.3;
 
 		root	/var/www/html;
 		index index.php index.html;
